Update Swagger annotations and API controllers
